--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "firebase": "^5.5.8",
+    "linkifyjs": "^2.1.7",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
